--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>frontend-workshop-app</title>
   </head>
   <body>
-    <div id="root"></div>
-    <h1>Hello World!!!</h1>
+    <div id="root">Hello world 3000 times!!!</div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
